fix bullets display on firefox

--- a/research-hub-web/src/styles.scss
+++ b/research-hub-web/src/styles.scss
@@ -50,8 +50,10 @@ hr {
   }
   ul li {
     position: relative;
+    line-height:30px;
+    padding-left: 1em;
     p {
-      padding-left: 15px;
+      display: inline;
     }
   }
   ol li {
